--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@
     background-color: darkblue;
     display: inline-block;
     margin: 10px;
+    border-radius: 40px;
 
 }
 
@@ -79,8 +80,8 @@
     margin-inline: auto;
 }
 .related .related__item {
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 60px;
     background-color: white;
 
 
@@ -121,12 +122,22 @@
 }
 
 .secondaryMenu {}
-.secondaryMenu .secondaryMenu__item {}
+.secondaryMenu .secondaryMenu__item {
+    width: 100px;
+    height: 40px;
+    background-color: lightgreen;
+    padding: 40px;
+    border-radius: 10px;
+}
 
 .copyright {
+    padding: 5px;
     position: absolute;
     bottom: 10px;
     right: 10px;
+    background-color: black;
+    border-radius: 5px;
+    color: lightgoldenrodyellow;
 
 }
 
